--- a/src/components/userDashboard/user-plans/style.css
+++ b/src/components/userDashboard/user-plans/style.css
@@ -10,17 +10,17 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  background-color: hsla(240, 15%, 9%, 1);
+  background-color: rgb(82,23,124);
   background-image: radial-gradient(
       at 88% 40%,
       hsla(240, 15%, 9%, 1) 0px,
       transparent 85%
     ),
-    radial-gradient(at 49% 30%, hsla(240, 15%, 9%, 1) 0px, transparent 85%),
-    radial-gradient(at 14% 26%, hsla(240, 15%, 9%, 1) 0px, transparent 85%),
-    radial-gradient(at 0% 64%, hsla(263, 93%, 56%, 1) 0px, transparent 85%),
-    radial-gradient(at 41% 94%, hsla(284, 100%, 84%, 1) 0px, transparent 85%),
-    radial-gradient(at 100% 99%, hsla(263, 93%, 56%, 1) 0px, transparent 85%);
+    radial-gradient(at 49% 30%, hsla(rgb(57,18,105), 1) 0px, transparent 85%),
+    radial-gradient(at 14% 26%, hsla(#51177B, 1) 0px, transparent 85%),
+    radial-gradient(at 0% 64%, hsla(#974ab6, 1) 0px, transparent 85%),
+    radial-gradient(at 41% 94%, rgb(152, 104, 228) 0px, transparent 85%),
+    radial-gradient(at 100% 99%, rgb(180, 144, 238) 0px, transparent 85%);
 
   border-radius: 1rem;
   box-shadow: 0px -16px 24px 0px rgba(255, 255, 255, 0.25) inset;
@@ -61,9 +61,9 @@
   height: 10rem;
   background-image: linear-gradient(
     0deg,
-    hsla(#6d28ff) 0%,
-    hsl(#6d28ff) 40%,
-    hsl(#6d28ff) 60%,
+    hsla(#a683f1) 0%,
+    hsl(#834cf9) 40%,
+    hsl(#7e43fc) 60%,
     hsla(#6d28ff) 100%
   );
 
