--- a/src/components/homePage/banner.css
+++ b/src/components/homePage/banner.css
@@ -1,4 +1,4 @@
-.swiper {
+/* .swiper {
     width: 100%;
     height: 100%;
     background: #000;
@@ -66,4 +66,148 @@
 .swiper-button-next,
 .swiper-button-prev {
     display: none;
+} */
+
+
+.swiper {
+    width: 100%;
+    height: 100%;
+    background: #000;
+}
+
+.swiper-slide {
+    font-size: 18px;
+    color: #fff;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 40px 60px;
+}
+
+.parallax-bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 130%;
+    height: 100%;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center;
+}
+
+.swiper-slide .title {
+    font-size: 2.5rem;
+    /* Adjusted for small screens */
+    font-weight: 700;
+    /* Bold for better readability */
+}
+
+.swiper-slide .subtitle {
+    font-size: 1.25rem;
+}
+
+.swiper-slide .text {
+    font-size: 1rem;
+    max-width: 500px;
+    /* Increased max-width for better alignment */
+    line-height: 1.5;
+    margin-top: 1rem;
+    /* Spacing between paragraphs */
+}
+
+.swiper-pagination {
+    position: absolute;
+    text-align: right;
+    padding-right: 20px;
+    transition: 300ms opacity;
+    transform: translate3d(0, 0, 0);
+    z-index: 10;
+}
+
+.swiper-pagination-bullet {
+    opacity: var(--swiper-pagination-bullet-opacity, 1);
+    background: #5c00962a;
+    height: 20px;
+    width: 20px;
+    border: 2px solid white;
+}
+
+.swiper-pagination-bullet:hover {
+    transform: scale(1.2);
+    box-shadow: 0 0 8px rgba(92, 0, 150, 0.5);
+}
+
+.swiper-pagination-bullet-active {
+    opacity: var(--swiper-pagination-bullet-opacity, 1);
+    background: #5C0096;
+    height: 20px;
+    width: 20px;
+    border: 2px solid white;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    display: none;
+}
+
+
+
+
+
+
+/* Banner Button */
+.banner-button {
+    --color: #fff;
+    padding: 0.8em 1.7em;
+    background-color: transparent;
+    border-radius: .3em;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .5s;
+    font-weight: 600;
+    font-size: 17px;
+    border: 2px solid;
+    font-family: inherit;
+    text-transform: uppercase;
+    color: var(--color);
+    z-index: 1;
+}
+
+.banner-button::before,
+.banner-button::after {
+    content: '';
+    display: block;
+    width: 50px;
+    height: 50px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    border-radius: 50%;
+    z-index: -1;
+    background-color: var(--color);
+    transition: 1s ease;
+}
+
+.banner-button::before {
+    top: -1em;
+    left: -1em;
+}
+
+.banner-button::after {
+    left: calc(100% + 1em);
+    top: calc(100% + 1em);
+}
+
+.banner-button:hover::before,
+.banner-button:hover::after {
+    height: 410px;
+    width: 410px;
+}
+
+.banner-button:hover {
+    /* color: rgb(10, 25, 30); */
+    color: #5C0096;
+}
+
+.banner-button:active {
+    filter: brightness(.8);
 }
