--- a/src/components/userDashboard/certificate/certificate.css
+++ b/src/components/userDashboard/certificate/certificate.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Twinkle+Star&display=swap');
+
+
+.fontTtwinkleStar {
+    font-family: "Twinkle Star", cursive;
+}
+
 .certificate-container {
     display: flex;
     justify-content: center;
@@ -35,6 +42,7 @@
     font-weight: bold;
     color: #371168;
     margin: 1.5rem 0;
+    font-family: "Twinkle Star", cursive;
 }
 
 .statement p {
